// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Autocomplete> Props should render correctly when the dropdown is closed 1`] = `
<div
  className="lumx-autocomplete"
>
  <TextField
    inputRef={
      Object {
        "current": null,
      }
    }
    onChange={[MockFunction]}
    textFieldRef={
      Object {
        "current": null,
      }
    }
    type="input"
    value=""
  />
  <Dropdown
    anchorRef={
      Object {
        "current": null,
      }
    }
    showDropdown={false}
  >
    <List>
      <ListItem
        isClickable={true}
        key="losangeles"
        size="tiny"
      >
        <div>
          Los Angeles
        </div>
      </ListItem>
      <ListItem
        isClickable={true}
        key="sanfrancisco"
        size="tiny"
      >
        <div>
          San Francisco
        </div>
      </ListItem>
      <ListItem
        isClickable={true}
        key="paris"
        size="tiny"
      >
        <div>
          Paris
        </div>
      </ListItem>
      <ListItem
        isClickable={true}
        key="montpellier"
        size="tiny"
      >
        <div>
          Montpellier
        </div>
      </ListItem>
      <ListItem
        isClickable={true}
        key="bordeaux"
        size="tiny"
      >
        <div>
          Bordeaux
        </div>
      </ListItem>
      <ListItem
        isClickable={true}
        key="toulouse"
        size="tiny"
      >
        <div>
          Toulouse
        </div>
      </ListItem>
      <ListItem
        isClickable={true}
        key="lyon"
        size="tiny"
      >
        <div>
          Lyon
        </div>
      </ListItem>
      <ListItem
        isClickable={true}
        key="montevideo"
        size="tiny"
      >
        <div>
          Montevideo
        </div>
      </ListItem>
    </List>
  </Dropdown>
</div>
`;

exports[`<Autocomplete> Snapshots and structure should render correctly 1`] = `
<div
  className="lumx-autocomplete"
>
  <TextField
    inputRef={
      Object {
        "current": null,
      }
    }
    onChange={[MockFunction]}
    textFieldRef={
      Object {
        "current": null,
      }
    }
    type="input"
    value=""
  />
  <Dropdown
    anchorRef={
      Object {
        "current": null,
      }
    }
    showDropdown={true}
  >
    <List>
      <ListItem
        isClickable={true}
        key="losangeles"
        size="tiny"
      >
        <div>
          Los Angeles
        </div>
      </ListItem>
      <ListItem
        isClickable={true}
        key="sanfrancisco"
        size="tiny"
      >
        <div>
          San Francisco
        </div>
      </ListItem>
      <ListItem
        isClickable={true}
        key="paris"
        size="tiny"
      >
        <div>
          Paris
        </div>
      </ListItem>
      <ListItem
        isClickable={true}
        key="montpellier"
        size="tiny"
      >
        <div>
          Montpellier
        </div>
      </ListItem>
      <ListItem
        isClickable={true}
        key="bordeaux"
        size="tiny"
      >
        <div>
          Bordeaux
        </div>
      </ListItem>
      <ListItem
        isClickable={true}
        key="toulouse"
        size="tiny"
      >
        <div>
          Toulouse
        </div>
      </ListItem>
      <ListItem
        isClickable={true}
        key="lyon"
        size="tiny"
      >
        <div>
          Lyon
        </div>
      </ListItem>
      <ListItem
        isClickable={true}
        key="montevideo"
        size="tiny"
      >
        <div>
          Montevideo
        </div>
      </ListItem>
    </List>
  </Dropdown>
</div>
`;
